# AOC

./: .gitignore  CMakeLists.txt  README.md  day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp  input_source.hpp  main.cpp
2021/: day_2.hpp  day_3.hpp
src/: input_source.hpp  main.cpp  main_definitions_helper.hpp  std_extentions.hpp
src/2015/: day_1.hpp
src/2020/: README.md  day_1.hpp  day_10.hpp  day_11.hpp  day_12.hpp  day_13.hpp  day_14.hpp  day_15.hpp  day_16.hpp  day_17.hpp  day_18.hpp  day_19.hpp  day_2.hpp  day_20.hpp  day_21.hpp  day_22.hpp  day_23.hpp  day_24.hpp  day_25.hpp  day_3.hpp  day_4.hpp  day_5.hpp  day_6.hpp  day_7.hpp  day_8.hpp  day_9.hpp
src/2021/: README.md  day_1.hpp  day_10.hpp  day_11.hpp  day_12.hpp  day_13.hpp  day_14.hpp  day_15.hpp  day_16.hpp  day_17.hpp  day_18.hpp  day_19.hpp  day_2.hpp  day_20.hpp  day_21.hpp  day_22.hpp  day_3.hpp  day_4.hpp  day_5.hpp  day_6.hpp  day_7.hpp  day_8.hpp  day_9.hpp
src/2022/: day_1.hpp  day_13.hpp  day_2.hpp  day_20.hpp  day_25.hpp  day_3.hpp
src/2023/: day_1.hpp  day_10.hpp  day_11.hpp  day_12.hpp  day_13.hpp  day_14.hpp  day_15.hpp  day_16.hpp  day_17.hpp  day_18.hpp  day_19.hpp  day_2.hpp  day_20.hpp  day_21.hpp  day_22.hpp  day_23.hpp  day_24.hpp  day_25.hpp  day_3.hpp  day_4.hpp  day_5.hpp  day_6.hpp  day_7.hpp  day_8.hpp  day_9.hpp
src/2024/: day_1.hpp  day_10.hpp  day_11.hpp  day_12.hpp  day_13.hpp  day_14.hpp  day_15.hpp  day_16.hpp  day_17.hpp  day_18.hpp  day_2.hpp  day_3.hpp  day_4.hpp  day_5.hpp  day_6.hpp  day_7.hpp  day_8.hpp  day_9.hpp
src/tools/: aaa_to_zzz_string.hpp  base_includes.h  (+15 more)
(+17 files in other folders)
